// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it indicates on the timeline if there is no activity 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeActivityTimeline
    activity={Array []}
    intl={
        Object {
            "formatDate": [Function],
            "formatMessage": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="timeline-header"
>
          <span
                    className="tag is-medium"
          >
                    Latest
          </span>
</header>,
        Array [
          <div
            className="timeline-item no-activity"
>
            <div
                        className="timeline-content"
            >
                        <p
                                    className="heading"
                        >
                                    No Recent Activity
                        </p>
            </div>
</div>,
        ],
        <div
          className="timeline-header"
>
          <span
                    className="tag is-medium"
          >
                    End
          </span>
</div>,
      ],
      "className": "timeline activity-timeline",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="tag is-medium"
>
            Latest
</span>,
          "className": "timeline-header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Latest",
            "className": "tag is-medium",
          },
          "ref": null,
          "rendered": "Latest",
          "type": "span",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": "no-activity",
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="timeline-content"
>
            <p
                        className="heading"
            >
                        No Recent Activity
            </p>
</div>,
          "className": "timeline-item no-activity",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p
              className="heading"
>
              No Recent Activity
</p>,
            "className": "timeline-content",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Recent Activity",
              "className": "heading",
            },
            "ref": null,
            "rendered": "No Recent Activity",
            "type": "p",
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="tag is-medium"
>
            End
</span>,
          "className": "timeline-header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "End",
            "className": "tag is-medium",
          },
          "ref": null,
          "rendered": "End",
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="timeline-header"
>
            <span
                        className="tag is-medium"
            >
                        Latest
            </span>
</header>,
          Array [
            <div
              className="timeline-item no-activity"
>
              <div
                            className="timeline-content"
              >
                            <p
                                          className="heading"
                            >
                                          No Recent Activity
                            </p>
              </div>
</div>,
          ],
          <div
            className="timeline-header"
>
            <span
                        className="tag is-medium"
            >
                        End
            </span>
</div>,
        ],
        "className": "timeline activity-timeline",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="tag is-medium"
>
              Latest
</span>,
            "className": "timeline-header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Latest",
              "className": "tag is-medium",
            },
            "ref": null,
            "rendered": "Latest",
            "type": "span",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": "no-activity",
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="timeline-content"
>
              <p
                            className="heading"
              >
                            No Recent Activity
              </p>
</div>,
            "className": "timeline-item no-activity",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="heading"
>
                No Recent Activity
</p>,
              "className": "timeline-content",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Recent Activity",
                "className": "heading",
              },
              "ref": null,
              "rendered": "No Recent Activity",
              "type": "p",
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="tag is-medium"
>
              End
</span>,
            "className": "timeline-header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "End",
              "className": "tag is-medium",
            },
            "ref": null,
            "rendered": "End",
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a timeline of the activity 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeActivityTimeline
    activity={
        Array [
            Object {
              "count": 2,
              "date": "2017-11-22T00:00:00",
              "status": 1,
              "statusName": "Fixed",
            },
            Object {
              "count": 0,
              "date": "2017-11-22T00:00:00",
              "status": 3,
              "statusName": "Skipped",
            },
            Object {
              "count": 1,
              "date": "2017-11-23T00:00:00",
              "status": 1,
              "statusName": "Fixed",
            },
          ]
    }
    intl={
        Object {
            "formatDate": [Function],
            "formatMessage": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header
          className="timeline-header"
>
          <span
                    className="tag is-medium"
          >
                    Latest
          </span>
</header>,
        Array [
          <div
            className="timeline-item"
>
            <div
                        className="timeline-marker"
            />
            <div
                        className="timeline-content"
            >
                        <p
                                    className="heading"
                        />
                        <p
                                    className="timeline-item__activity-entry"
                        >
                                    <span
                                                className="badge inverted"
                                                data-badge={1}
                                    />
                        </p>
            </div>
</div>,
          <div
            className="timeline-item"
>
            <div
                        className="timeline-marker"
            />
            <div
                        className="timeline-content"
            >
                        <p
                                    className="heading"
                        />
                        <p
                                    className="timeline-item__activity-entry"
                        >
                                    <span
                                                className="badge inverted"
                                                data-badge={2}
                                    />
                        </p>
            </div>
</div>,
        ],
        <div
          className="timeline-header"
>
          <span
                    className="tag is-medium"
          >
                    End
          </span>
</div>,
      ],
      "className": "timeline activity-timeline",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="tag is-medium"
>
            Latest
</span>,
          "className": "timeline-header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Latest",
            "className": "tag is-medium",
          },
          "ref": null,
          "rendered": "Latest",
          "type": "span",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": "2017-11-23T00:00:00",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="timeline-marker"
/>,
            <div
              className="timeline-content"
>
              <p
                            className="heading"
              />
              <p
                            className="timeline-item__activity-entry"
              >
                            <span
                                          className="badge inverted"
                                          data-badge={1}
                            />
              </p>
</div>,
          ],
          "className": "timeline-item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "timeline-marker",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="heading"
/>,
                Array [
                  <p
                    className="timeline-item__activity-entry"
>
                    <span
                                        className="badge inverted"
                                        data-badge={1}
                    />
</p>,
                ],
              ],
              "className": "timeline-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "heading",
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              Object {
                "instance": null,
                "key": "2017-11-23T00:00:00-1",
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="badge inverted"
                    data-badge={1}
/>,
                  "className": "timeline-item__activity-entry",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "badge inverted",
                    "data-badge": 1,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "2017-11-22T00:00:00",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="timeline-marker"
/>,
            <div
              className="timeline-content"
>
              <p
                            className="heading"
              />
              <p
                            className="timeline-item__activity-entry"
              >
                            <span
                                          className="badge inverted"
                                          data-badge={2}
                            />
              </p>
</div>,
          ],
          "className": "timeline-item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "timeline-marker",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="heading"
/>,
                Array [
                  <p
                    className="timeline-item__activity-entry"
>
                    <span
                                        className="badge inverted"
                                        data-badge={2}
                    />
</p>,
                ],
              ],
              "className": "timeline-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "heading",
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              Object {
                "instance": null,
                "key": "2017-11-22T00:00:00-1",
                "nodeType": "host",
                "props": Object {
                  "children": <span
                    className="badge inverted"
                    data-badge={2}
/>,
                  "className": "timeline-item__activity-entry",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "badge inverted",
                    "data-badge": 2,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="tag is-medium"
>
            End
</span>,
          "className": "timeline-header",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "End",
            "className": "tag is-medium",
          },
          "ref": null,
          "rendered": "End",
          "type": "span",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header
            className="timeline-header"
>
            <span
                        className="tag is-medium"
            >
                        Latest
            </span>
</header>,
          Array [
            <div
              className="timeline-item"
>
              <div
                            className="timeline-marker"
              />
              <div
                            className="timeline-content"
              >
                            <p
                                          className="heading"
                            />
                            <p
                                          className="timeline-item__activity-entry"
                            >
                                          <span
                                                        className="badge inverted"
                                                        data-badge={1}
                                          />
                            </p>
              </div>
</div>,
            <div
              className="timeline-item"
>
              <div
                            className="timeline-marker"
              />
              <div
                            className="timeline-content"
              >
                            <p
                                          className="heading"
                            />
                            <p
                                          className="timeline-item__activity-entry"
                            >
                                          <span
                                                        className="badge inverted"
                                                        data-badge={2}
                                          />
                            </p>
              </div>
</div>,
          ],
          <div
            className="timeline-header"
>
            <span
                        className="tag is-medium"
            >
                        End
            </span>
</div>,
        ],
        "className": "timeline activity-timeline",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="tag is-medium"
>
              Latest
</span>,
            "className": "timeline-header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Latest",
              "className": "tag is-medium",
            },
            "ref": null,
            "rendered": "Latest",
            "type": "span",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": "2017-11-23T00:00:00",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="timeline-marker"
/>,
              <div
                className="timeline-content"
>
                <p
                                className="heading"
                />
                <p
                                className="timeline-item__activity-entry"
                >
                                <span
                                                className="badge inverted"
                                                data-badge={1}
                                />
                </p>
</div>,
            ],
            "className": "timeline-item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "timeline-marker",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="heading"
/>,
                  Array [
                    <p
                      className="timeline-item__activity-entry"
>
                      <span
                                            className="badge inverted"
                                            data-badge={1}
                      />
</p>,
                  ],
                ],
                "className": "timeline-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "heading",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": "2017-11-23T00:00:00-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="badge inverted"
                      data-badge={1}
/>,
                    "className": "timeline-item__activity-entry",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "className": "badge inverted",
                      "data-badge": 1,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "2017-11-22T00:00:00",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="timeline-marker"
/>,
              <div
                className="timeline-content"
>
                <p
                                className="heading"
                />
                <p
                                className="timeline-item__activity-entry"
                >
                                <span
                                                className="badge inverted"
                                                data-badge={2}
                                />
                </p>
</div>,
            ],
            "className": "timeline-item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "timeline-marker",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="heading"
/>,
                  Array [
                    <p
                      className="timeline-item__activity-entry"
>
                      <span
                                            className="badge inverted"
                                            data-badge={2}
                      />
</p>,
                  ],
                ],
                "className": "timeline-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "heading",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": "2017-11-22T00:00:00-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": <span
                      className="badge inverted"
                      data-badge={2}
/>,
                    "className": "timeline-item__activity-entry",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": undefined,
                      "className": "badge inverted",
                      "data-badge": 2,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="tag is-medium"
>
              End
</span>,
            "className": "timeline-header",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "End",
              "className": "tag is-medium",
            },
            "ref": null,
            "rendered": "End",
            "type": "span",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
